--- a/archives/toutiao-search/2023-12-20.md
+++ b/archives/toutiao-search/2023-12-20.md
@@ -1,57 +1,73 @@
 # 2023-12-20
 
-共 105 条
+共 119 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Dec 20 2023 08:21:06 GMT+0800 (China Standard Time) -->
-1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
-1. [军媒评女子骚扰哨兵：哨兵不可侵犯](https://so.toutiao.com/search?keyword=军媒评女子骚扰哨兵：哨兵不可侵犯)
+<!-- 最后更新时间 Wed Dec 20 2023 09:27:27 GMT+0800 (China Standard Time) -->
+1. [甘肃地震已致超百人遇难](https://so.toutiao.com/search?keyword=甘肃地震已致超百人遇难)
+1. [科州裁决特朗普不具备党内初选资格](https://so.toutiao.com/search?keyword=科州裁决特朗普不具备党内初选资格)
 1. [从2023年“展会热”看外企追赶中国机遇](https://so.toutiao.com/search?keyword=从2023年“展会热”看外企追赶中国机遇)
 1. [甘肃6.2级地震为何破坏力这么大](https://so.toutiao.com/search?keyword=甘肃6.2级地震为何破坏力这么大)
 1. [文旅局回应冰雪大世界游客喊退票](https://so.toutiao.com/search?keyword=文旅局回应冰雪大世界游客喊退票)
-1. [中方回应菲总统称菲中关系走错方向](https://so.toutiao.com/search?keyword=中方回应菲总统称菲中关系走错方向)
+1. [甘肃积石山已记录到余震423次](https://so.toutiao.com/search?keyword=甘肃积石山已记录到余震423次)
 1. [甘肃地震发布会现场向遇难同胞默哀](https://so.toutiao.com/search?keyword=甘肃地震发布会现场向遇难同胞默哀)
+1. [24小时直击甘肃地震救援](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援)
+1. [军媒评女子骚扰哨兵：哨兵不可侵犯](https://so.toutiao.com/search?keyword=军媒评女子骚扰哨兵：哨兵不可侵犯)
+1. [高校回应宿舍地震时门打不开](https://so.toutiao.com/search?keyword=高校回应宿舍地震时门打不开)
+1. [飞贼国资委大楼窃名烟 一半是假的](https://so.toutiao.com/search?keyword=飞贼国资委大楼窃名烟+一半是假的)
+1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [“南京过江隧道多车连环追尾”不实](https://so.toutiao.com/search?keyword=“南京过江隧道多车连环追尾”不实)
+1. [高校学生砸门逃生避震 宿管去哪了](https://so.toutiao.com/search?keyword=高校学生砸门逃生避震+宿管去哪了)
+1. [苹果CEO库克宣布将捐款驰援甘肃](https://so.toutiao.com/search?keyword=苹果CEO库克宣布将捐款驰援甘肃)
+1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
+1. [哈尔滨冰雪大世界致歉：连夜整改](https://so.toutiao.com/search?keyword=哈尔滨冰雪大世界致歉：连夜整改)
+1. [甘肃地震爸爸赤脚抱起女儿飞奔](https://so.toutiao.com/search?keyword=甘肃地震爸爸赤脚抱起女儿飞奔)
+1. [鳖盖被压坏男子索赔两万多吓坏司机](https://so.toutiao.com/search?keyword=鳖盖被压坏男子索赔两万多吓坏司机)
+1. [穿交警制服人员当街打架？当地回应](https://so.toutiao.com/search?keyword=穿交警制服人员当街打架？当地回应)
+1. [李佳琦向甘肃灾区捐款500万元](https://so.toutiao.com/search?keyword=李佳琦向甘肃灾区捐款500万元)
+1. [男子拆快递时意外收到2箱现金](https://so.toutiao.com/search?keyword=男子拆快递时意外收到2箱现金)
+1. [女班主任投篮百发百中引同学欢呼](https://so.toutiao.com/search?keyword=女班主任投篮百发百中引同学欢呼)
+1. [疯狂小杨哥向甘肃灾区捐款](https://so.toutiao.com/search?keyword=疯狂小杨哥向甘肃灾区捐款)
+1. [震区灾民痛哭 青海省委书记抱着安慰](https://so.toutiao.com/search?keyword=震区灾民痛哭+青海省委书记抱着安慰)
+1. [小米辞退三名违规员工 永不录用](https://so.toutiao.com/search?keyword=小米辞退三名违规员工+永不录用)
+1. [京东紧急援助甘肃救灾](https://so.toutiao.com/search?keyword=京东紧急援助甘肃救灾)
+1. [用户称地震时7部苹果手机均无预警](https://so.toutiao.com/search?keyword=用户称地震时7部苹果手机均无预警)
+1. [美国组建护航联盟 胡塞武装回应](https://so.toutiao.com/search?keyword=美国组建护航联盟+胡塞武装回应)
+1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
+1. [网红倪海杉甘肃地震捐款100万](https://so.toutiao.com/search?keyword=网红倪海杉甘肃地震捐款100万)
+1. [中国地震带分布图](https://so.toutiao.com/search?keyword=中国地震带分布图)
+1. [韩国进口中国辣椒酱创纪录](https://so.toutiao.com/search?keyword=韩国进口中国辣椒酱创纪录)
+1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
+1. [江平遗体告别仪式将于12月23日举行](https://so.toutiao.com/search?keyword=江平遗体告别仪式将于12月23日举行)
+1. [为何低温下花生油有的凝固有的澄清](https://so.toutiao.com/search?keyword=为何低温下花生油有的凝固有的澄清)
+1. [专家回应地震前后乌鸦聚集](https://so.toutiao.com/search?keyword=专家回应地震前后乌鸦聚集)
+1. [专家：台湾恃宠而骄的日子结束了](https://so.toutiao.com/search?keyword=专家：台湾恃宠而骄的日子结束了)
+1. [张小斐回应当选北京视协副主席](https://so.toutiao.com/search?keyword=张小斐回应当选北京视协副主席)
+1. [男生数秒给舍友庆生变“地震倒计时”](https://so.toutiao.com/search?keyword=男生数秒给舍友庆生变“地震倒计时”)
+1. [李国庆劝董明珠给年轻人留个面子](https://so.toutiao.com/search?keyword=李国庆劝董明珠给年轻人留个面子)
+1. [​射频芯片巨头出售中国工厂](https://so.toutiao.com/search?keyword=​射频芯片巨头出售中国工厂)
+1. [草莓种植户发愁今年销量不好](https://so.toutiao.com/search?keyword=草莓种植户发愁今年销量不好)
+1. [男子地震时抱孩子冲进厕所保护妻子](https://so.toutiao.com/search?keyword=男子地震时抱孩子冲进厕所保护妻子)
+1. [殡仪馆回应火化分高低档炉](https://so.toutiao.com/search?keyword=殡仪馆回应火化分高低档炉)
+1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
+1. [热心商户为灾区群众准备2000斤饺子](https://so.toutiao.com/search?keyword=热心商户为灾区群众准备2000斤饺子)
+1. [美宣布3亿美元对台军售 国防部回应](https://so.toutiao.com/search?keyword=美宣布3亿美元对台军售+国防部回应)
+1. [甘肃：应急救援车辆免费通行](https://so.toutiao.com/search?keyword=甘肃：应急救援车辆免费通行)
+1. [震区安置点第一夜：医护连夜工作](https://so.toutiao.com/search?keyword=震区安置点第一夜：医护连夜工作)
+1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
+1. [中方回应菲总统称菲中关系走错方向](https://so.toutiao.com/search?keyword=中方回应菲总统称菲中关系走错方向)
 1. [你支持广州电动车禁令吗](https://so.toutiao.com/search?keyword=你支持广州电动车禁令吗)
 1. [上海实现秒级地震预警](https://so.toutiao.com/search?keyword=上海实现秒级地震预警)
-1. [甘肃地震已致超百人遇难](https://so.toutiao.com/search?keyword=甘肃地震已致超百人遇难)
-1. [飞贼国资委大楼窃名烟 一半是假的](https://so.toutiao.com/search?keyword=飞贼国资委大楼窃名烟+一半是假的)
-1. [高校学生砸门逃生避震 宿管去哪了](https://so.toutiao.com/search?keyword=高校学生砸门逃生避震+宿管去哪了)
-1. [“南京过江隧道多车连环追尾”不实](https://so.toutiao.com/search?keyword=“南京过江隧道多车连环追尾”不实)
 1. [睡觉时发生地震该怎么办](https://so.toutiao.com/search?keyword=睡觉时发生地震该怎么办)
-1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
-1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
-1. [高校回应宿舍地震时门打不开](https://so.toutiao.com/search?keyword=高校回应宿舍地震时门打不开)
-1. [小米辞退三名违规员工 永不录用](https://so.toutiao.com/search?keyword=小米辞退三名违规员工+永不录用)
-1. [哈尔滨冰雪大世界致歉：连夜整改](https://so.toutiao.com/search?keyword=哈尔滨冰雪大世界致歉：连夜整改)
-1. [苹果CEO库克宣布将捐款驰援甘肃](https://so.toutiao.com/search?keyword=苹果CEO库克宣布将捐款驰援甘肃)
-1. [疯狂小杨哥向甘肃灾区捐款](https://so.toutiao.com/search?keyword=疯狂小杨哥向甘肃灾区捐款)
 1. [美国军火巨头谈巴以冲突](https://so.toutiao.com/search?keyword=美国军火巨头谈巴以冲突)
-1. [用户称地震时7部苹果手机均无预警](https://so.toutiao.com/search?keyword=用户称地震时7部苹果手机均无预警)
 1. [也门胡塞武装为何袭击红海商船](https://so.toutiao.com/search?keyword=也门胡塞武装为何袭击红海商船)
 1. [游客上车后导游要求每人交200元](https://so.toutiao.com/search?keyword=游客上车后导游要求每人交200元)
-1. [网红倪海杉甘肃地震捐款100万](https://so.toutiao.com/search?keyword=网红倪海杉甘肃地震捐款100万)
-1. [鳖盖被压坏男子索赔两万多吓坏司机](https://so.toutiao.com/search?keyword=鳖盖被压坏男子索赔两万多吓坏司机)
-1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
-1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
 1. [董明珠回应“思维老式”质疑](https://so.toutiao.com/search?keyword=董明珠回应“思维老式”质疑)
-1. [江平遗体告别仪式将于12月23日举行](https://so.toutiao.com/search?keyword=江平遗体告别仪式将于12月23日举行)
-1. [震区灾民痛哭 青海省委书记抱着安慰](https://so.toutiao.com/search?keyword=震区灾民痛哭+青海省委书记抱着安慰)
 1. [朱丹“被骗”事件始末](https://so.toutiao.com/search?keyword=朱丹“被骗”事件始末)
-1. [男子拆快递时意外收到2箱现金](https://so.toutiao.com/search?keyword=男子拆快递时意外收到2箱现金)
-1. [专家回应地震前后乌鸦聚集](https://so.toutiao.com/search?keyword=专家回应地震前后乌鸦聚集)
-1. [中国地震带分布图](https://so.toutiao.com/search?keyword=中国地震带分布图)
-1. [穿交警制服人员当街打架？当地回应](https://so.toutiao.com/search?keyword=穿交警制服人员当街打架？当地回应)
-1. [草莓种植户发愁今年销量不好](https://so.toutiao.com/search?keyword=草莓种植户发愁今年销量不好)
-1. [专家：台湾恃宠而骄的日子结束了](https://so.toutiao.com/search?keyword=专家：台湾恃宠而骄的日子结束了)
-1. [​射频芯片巨头出售中国工厂](https://so.toutiao.com/search?keyword=​射频芯片巨头出售中国工厂)
 1. [AITO问界M9将于12月26日上市](https://so.toutiao.com/search?keyword=AITO问界M9将于12月26日上市)
 1. [地震后网友拍到消防车呼啸出动](https://so.toutiao.com/search?keyword=地震后网友拍到消防车呼啸出动)
-1. [为何低温下花生油有的凝固有的澄清](https://so.toutiao.com/search?keyword=为何低温下花生油有的凝固有的澄清)
 1. [西部战区派出军机深入地震灾区勘察](https://so.toutiao.com/search?keyword=西部战区派出军机深入地震灾区勘察)
-1. [男子地震时抱孩子冲进厕所保护妻子](https://so.toutiao.com/search?keyword=男子地震时抱孩子冲进厕所保护妻子)
 1. [男子网购羽绒服发现有丧葬胸花](https://so.toutiao.com/search?keyword=男子网购羽绒服发现有丧葬胸花)
-1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
-1. [殡仪馆回应火化分高低档炉](https://so.toutiao.com/search?keyword=殡仪馆回应火化分高低档炉)
 1. [张小斐当选北京电视艺术家协会副主席](https://so.toutiao.com/search?keyword=张小斐当选北京电视艺术家协会副主席)
 1. [公租房小区被曝“豪车”林立](https://so.toutiao.com/search?keyword=公租房小区被曝“豪车”林立)
 1. [西北零下12度的地震救援难度有多大](https://so.toutiao.com/search?keyword=西北零下12度的地震救援难度有多大)
@@ -67,7 +83,6 @@
 1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
 1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
 1. [美国西南航空被罚1.4亿美元](https://so.toutiao.com/search?keyword=美国西南航空被罚1.4亿美元)
-1. [男生数秒给舍友庆生变“地震倒计时”](https://so.toutiao.com/search?keyword=男生数秒给舍友庆生变“地震倒计时”)
 1. [“侯康配”支持度与“赖萧配”打平](https://so.toutiao.com/search?keyword=“侯康配”支持度与“赖萧配”打平)
 1. [胡明轩23+4+6 广东送同曦五连败](https://so.toutiao.com/search?keyword=胡明轩23+4+6+广东送同曦五连败)
 1. [瑞士使馆就甘肃地震致哀](https://so.toutiao.com/search?keyword=瑞士使馆就甘肃地震致哀)
@@ -86,7 +101,6 @@
 1. [快船狂轰151分创队史单场得分第4高](https://so.toutiao.com/search?keyword=快船狂轰151分创队史单场得分第4高)
 1. [红海事件如何推高全球航运成本](https://so.toutiao.com/search?keyword=红海事件如何推高全球航运成本)
 1. [乌军总司令证实发现窃听装置](https://so.toutiao.com/search?keyword=乌军总司令证实发现窃听装置)
-1. [韩国进口中国辣椒酱创纪录](https://so.toutiao.com/search?keyword=韩国进口中国辣椒酱创纪录)
 1. [军营大厨手把手教你萝卜炖羊肉](https://so.toutiao.com/search?keyword=军营大厨手把手教你萝卜炖羊肉)
 1. [赖清德违建处“赖皮”景点冒不停](https://so.toutiao.com/search?keyword=赖清德违建处“赖皮”景点冒不停)
 1. [翼龙-2H无人机飞赴甘肃救灾](https://so.toutiao.com/search?keyword=翼龙-2H无人机飞赴甘肃救灾)
